feat: complete UI homepage

--- a/public/assets/frontend/css/color-2.css
+++ b/public/assets/frontend/css/color-2.css
@@ -1,5 +1,5 @@
 :root {
-  --trevlo-base: #63AB45;
+  --trevlo-base: #C67C4E;
   --trevlo-base-rgb: 99, 171, 69;
 }
 /*# sourceMappingURL=color-2.css.map */
