handle product on the admin site

--- a/public/assets/frontend/css/color-1.css
+++ b/public/assets/frontend/css/color-1.css
@@ -1,5 +1,5 @@
 :root {
-  --trevlo-font: "Inter", sans-serif;
+  --trevlo-font: "Be Vietnam Pro", sans-serif;
   --trevlo-font2: "Plus Jakarta Sans", sans-serif;
   --trevlo-special-font: "Dancing Script", cursive;
   --trevlo-base: #384BFF;
