--- a/public/assets/frontend/css/trevlo.css
+++ b/public/assets/frontend/css/trevlo.css
@@ -2725,7 +2725,7 @@ path {
   position: relative;
   padding: 17px 20px 15px;
   margin-top: 18px;
-  background-color: var(--trevlo-white2, #FAF5EE);
+  background-color: #FAF5F0;
   border-radius: 10px;
   transition: all 400ms ease-in-out;
   z-index: 1;
@@ -2795,7 +2795,7 @@ path {
   margin-top: 7px;
   margin-bottom: 13px;
   height: 1px;
-  background-color: var(--trevlo-white3, #EBE6DE);
+  background-color: #D0D5DD;
   transition: all 0.4s ease-in-out;
 }
 .tour-listing__card:hover .tour-listing__card-divider {
@@ -7043,6 +7043,19 @@ body.megamenu-popup-active .mobile-nav__content {
   background-size: cover;
   background-image: url(../images/backgrounds/new-bg.png);
   opacity: 0.4;
+}
+.page-header__bg1 {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  background-size: cover;
+  background-image: url(../images/backgrounds/list-tour-bg.png);
 }
 .page-header .container {
   position: relative;
